infra/k8s/bff-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
    spec:
      containers:
      - name: bff
        image: tryggsone-bff
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: bff-srv
spec:
  selector:
    app: bff
  ports:
  - port: 3000
    targetPort: 3000
