infra/k8s/bff-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-redis-depl
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-srv
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
