infra/k8s/bikes-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bikes-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bikes
  template:
    metadata:
      labels:
        app: bikes
    spec:
      containers:
      - name: bikes
        image: tryggsone-bikes
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: bikes-srv
spec:
  selector:
    app: bikes
  ports:
  - port: 3000
    targetPort: 3000
