infra/k8s/logger-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger
  template:
    metadata:
      labels:
        app: logger
    spec:
      containers:
      - name: logger
        image: tryggsone-logger
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: logger-srv
spec:
  selector:
    app: logger
  ports:
  - port: 3000
    targetPort: 3000
