infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
spec:
  ingressClassName: nginx

  rules:
    - host: localhost.dev
      http:
        paths:
          - path: /bff
            pathType: Prefix
            backend:
              service:
                name: bff-srv
                port:
                  number: 3000

          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: client-srv
          #       port:
          #         number: 3000
